...
      <TouchableOpacity
        style={styles.signOutButton}
        onPress={() => {
          signOut();
        }}
      >
        <Text style={styles.signOutText}>Sign Out</Text>
      </TouchableOpacity>
      <NetworkToast />
    </SafeAreaView>
  );
}

